--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,17 +1,33 @@
 :root{
-    --menu-nav-width: 300px;
-    --open: 220px;
+    --primary: #87ceeb;
+    --primary-light: #daeff8;
+    --primary-dark: #1c476c;
+    --white: #ffffff;
+    --dark: #121212;
 }
-body{
-    transition: all 0.3s ease;
+*{
+    transition: .2s ease;
 }
 /* HEADER */
+/* header *{
+    color: var(--white) !important;
+} */
 header nav{
-    background-color: rgb(0, 155, 252);
+    background-color: var(--primary-dark);
 }
-header nav div div a{
+.navbar-nav *{
     color: #fff;
     text-decoration: none;
+}
+.nav-link{
+    transition: all .2s;
+}
+.nav-link:hover{
+    color: var(--primary-light);
+    transform: scale(1.1);
+    border: 1px solid var(--primary);
+    border-radius: .5rem;
+    padding: .5rem;
 }
 #modal-login::backdrop{
     background-color: rgba(0,0,0,.3);
@@ -21,6 +37,7 @@ header nav div div a{
     border-radius: 15px;
     border: none;
     box-shadow: 4px 4px 15px rgba(0,0,0,0.3);
+    background-color: var(--primary-dark);
 }
 #form-login{
     display: flex;
@@ -31,10 +48,14 @@ header nav div div a{
     min-height: 350px;
     padding: 2.5rem;
 }
+#form-login .input-group-text{
+    background-color: var(--primary-dark);
+}
 #form-login input{
     border-radius: 0 10px 10px 0;
     border: 1px solid #aaa;
     padding: 5px 10px;
+    color: var(--primary-dark) !important;
 }
 #btn-close-login{
     position: absolute;
@@ -42,18 +63,29 @@ header nav div div a{
     right: 5px;
 }
 #menu-nav{
+    margin: 0;
+    padding: 1rem;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
     position: fixed;
+    border:none;
+    inset: unset;
     top: 0;
-    right: 0;
-    overflow: hidden;
-    padding: 3rem;
+    left: 100%;
     height: 100vh;
-    width: 50%;
-    color: #fff;
-    border: none;
-    border-left: 2px solid #aaa;
-    
-    transition: all 1s ease;
+    width: 220px;
+    border-radius: 0;
+    transition: display 0.2s, overlay 0.2s, translate 0.2s;
+    translate: calc(var(--open, 0) * -100%) 0;
+    overflow: hidden;
+}
+#menu-nav .navbar-nav{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-around;
+    list-style: none;
 }
 #menu-nav li a{
     color: #fff;
@@ -65,10 +97,16 @@ header nav div div a{
     background: hsl(0 0% 15% / 0.5);
 }
 body:has([id=menu-nav]:popover-open){
-    translate: -50% 0;
+    translate: -220px 0;
     filter: blur(2px);
 }
-#menu-nav:popover-open{
-    /* translate: 100% 0; */
-    background-color: red ;
+body:has([id=menu-nav]:popover-open) #navbar-toggler{
+    display: none;
+}
+#menu-nav:popover-open,
+#menu-nav:popover-open::backdrop {
+  @starting-style {
+    --open: 0;
+  }
+  --open: 1;
 }
