--- a/src/css/styleSeccionProfesionales.css
+++ b/src/css/styleSeccionProfesionales.css
@@ -36,15 +36,28 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  width: 240px;
+  width: 245px;
+  max-height: 294px;
+  margin-left: 12.5px;
 }
 
 .imgProfesionales {
   width: 150px;
   height: 150px;
   object-fit: cover;
+}
+
+.btn {
+  font-size: 0.9rem;
+  padding: 0.25rem;
+}
+
+.titleSectionProfesionales {
+  color: #0d6efd;
+  margin-left: 1.2rem;
+  text-decoration: underline;
+  text-align: center;
+  font-weight: bold;
 }
 
 @media (max-width: 800px) {
@@ -64,7 +77,7 @@ body {
     padding: 0.5rem;
   }
   .card-title {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
   .card-text {
     font-size: 1rem;
