--- a/src/css/styleRegistro.css
+++ b/src/css/styleRegistro.css
@@ -21,7 +21,7 @@ section{
 }
 
 .container {
-    max-width: 400px;
+    width: 60%;
     margin: 2em;
     padding: 1.5em;
     border: 1px solid black;
@@ -29,7 +29,13 @@ section{
     background-color: #daeff8;
 }
   
-
+#userType {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 1em;
+    margin: 0.2em;
+}
 /* Estilo del botón de registro */
 .btn-block {
     margin-top: 20px;
