--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,28 +4,51 @@
     --primary-dark: #1c476c;
     --white: #ffffff;
     --dark: #121212;
+    /* MAIN PAGE*************************************** */
+    /*HEADER */
+    --heading-bg:#ffffff;
+    --heading-text: #000000;
+    --button: #135CFE;
+    --button-text: #FFFFFF;
+    /* MAIN */
+    --main-background: #E2EFF7;
+    --main-highlighted-text: #FE483B;
+    --main-highlighted-bg: #FFFFFF;
+    --main-heading: #000000;
+    --main-subheading: #000000;
+    --main-icons: #ffffff;
+    --main-icons-text: #000000;
+    /* BUTTON */
+    --btn-primary-text: #FFFFFF;
+    --btn-primary-bg: #135CFE;
+    --btn-secondary-text: #000000;
+    --btn-secondary-bg: #ffffff;
+    /* ADDS */
+    --adds-bg: #ffffff;
+    --adds-line: #fe483b;
 }
+
 *{
     transition: .2s ease;
 }
 /* HEADER */
-/* header *{
-    color: var(--white) !important;
-} */
-header nav{
-    background-color: var(--primary-dark);
+header{
+    margin-bottom: 1rem;
 }
-.navbar-nav *{
-    color: #fff;
+header nav{
+    background-color: var(--heading-bg);
+}
+header *{
+    color: var(--heading-text);
     text-decoration: none;
 }
 .nav-link{
     transition: all .2s;
 }
 .nav-link:hover{
-    color: var(--primary-light);
+    font-weight: bold;
     transform: scale(1.1);
-    border: 1px solid var(--primary);
+    border: 1px solid var(--main-highlighted-text);
     border-radius: .5rem;
     padding: .5rem;
 }
@@ -37,7 +60,7 @@ header nav{
     border-radius: 15px;
     border: none;
     box-shadow: 4px 4px 15px rgba(0,0,0,0.3);
-    background-color: var(--primary-dark);
+    background-color: var(--main-background);
 }
 #form-login{
     display: flex;
@@ -49,13 +72,16 @@ header nav{
     padding: 2.5rem;
 }
 #form-login .input-group-text{
-    background-color: var(--primary-dark);
+    background-color: var(--main-highlighted-bg);
+    color: var(--btn-secondary-text);
+    cursor: default;
 }
 #form-login input{
     border-radius: 0 10px 10px 0;
-    border: 1px solid #aaa;
+    border: 1px solid none;
     padding: 5px 10px;
-    color: var(--primary-dark) !important;
+    background-color: var(--main-highlighted-bg) !important;
+    color: var(--btn-secondary-text);
 }
 #btn-close-login{
     position: absolute;
@@ -80,18 +106,35 @@ header nav{
     translate: calc(var(--open, 0) * -100%) 0;
     overflow: hidden;
 }
+#menu-nav{
+    background: var(--main-background);
+}
 #menu-nav .navbar-nav{
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: space-around;
+    gap: 2rem;
     list-style: none;
+    margin-bottom: 4rem;
 }
 #menu-nav li a{
     color: #fff;
 }
-#menu-nav{
-    background: rgb(0, 57, 93);
+#menu-nav a{
+    color: var(--btn-secondary-text) !important;
+    font-size: 2rem;
+}
+#menu-nav .btn-reg-log{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+}
+#menu-nav .btn-reg-log button{
+    width: 100%;
+    height: 4rem;
+    font-size: 1.5rem;
 }
 #menu-nav::-webkit-backdrop, #menu-nav::backdrop {
     background: hsl(0 0% 15% / 0.5);
@@ -109,6 +152,57 @@ body:has([id=menu-nav]:popover-open) #navbar-toggler{
     --open: 0;
   }
   --open: 1;
+}
+.btn-salir{
+    background-image: url('/src/iconos/logout.svg');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: 2rem;
+    width: 100%;
+    height: 3rem;
+}
+
+/* MAIN */
+.body-container{
+    background-color: var(--main-background);
+    margin: auto;
+}
+
+.contenedor{
+    background-color: var(--main-highlighted-bg);
+    min-height: 80vh;
+    max-width: 960px;
+}
+
+.btn-primary{
+    background-color: var(--btn-primary-bg);
+    color: var(--btn-primary-text);
+    transition: .3s;
+}
+.btn-primary:hover{
+    background-color: #3173ff;
+    color: var(--btn-primary-text);
+    border: 1px solid var(--btn-primary-bg);
+}
+.btn-secondary{
+    background-color: var(--btn-secondary-bg);
+    color: var(--btn-secondary-text);
+    transition: .3s;
+}
+.btn-secondary:hover{
+    background-color: var(--btn-secondary-text);
+    color: var(--btn-secondary-bg);
+}
+.btn-orange{
+    background-color: var(--main-highlighted-text);
+    color: var(--main-highlighted-bg);
+    transition: .3s;
+    text-decoration: none;
+}
+.btn-orange:hover{
+    background-color: var(--main-highlighted-bg);
+    color: var(--main-highlighted-text);
+    border: 1px solid var(--main-highlighted-text);
 }
 
 /* FOOTER */
