--- a/src/css/styleSeccionProfesionales.css
+++ b/src/css/styleSeccionProfesionales.css
@@ -3,10 +3,7 @@ body {
 }
 
 .swiper {
-  width: 98%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
 .swiper-slide{
@@ -32,8 +29,11 @@ body {
 }
 .swiper-button-prev, .swiper-button-next {
   --swiper-navigation-color: var(--main-highlighted-text);
+  --swiper-navigation-size: 40px;
+  --swiper-navigation-top-offset: 50%;
+  --swiper-navigation-sides-offset: 0px;
   opacity: 0.25;
-  padding: 1.5rem;
+  padding: 0.5rem;
   transition: all 0.3s;
 }
 
@@ -59,7 +59,18 @@ body {
   object-fit: cover;
 }
 
-@media (max-width: 800px) {
+.botonTurno {
+  background-color: var(--main-highlighted-text);
+  color: white;
+}
+
+.botonTurno:hover {
+  border: 1px solid var(--main-highlighted-text);
+  color: var(--main-highlighted-text);
+  background-color: white;
+}
+
+@media (max-width: 991px) {
   .swiper{
     width: 100%;
     height: 300px;
@@ -87,5 +98,15 @@ body {
   .swiper-button-prev, .swiper-button-next {
     --swiper-navigation-size: 25px;
     padding: 1rem;
+  }
+  .botonTurno {
+    font-size: 0.8rem;
+    padding: 0.5rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .botonTurno {
+    font-size: 0.8rem;
   }
 }
