--- a/src/css/styleRegistro.css
+++ b/src/css/styleRegistro.css
@@ -20,7 +20,7 @@ main{
     justify-content: center;
 }
 
-.container {
+.container-form {
     width: 60%;
     margin: 2em;
     padding: 1.5em;
@@ -32,17 +32,11 @@ main{
 #userType {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly; 
     padding: 1em;
     margin: 0.2em;
 }
 /* Estilo del botón de registro */
 .btn-block {
     margin-top: 20px;
-}
-
-
-footer {
-    background-color: #f5f5f5;
-    height: 2em;
 }
