--- a/src/css/seccionServicios.css
+++ b/src/css/seccionServicios.css
@@ -1,22 +1,10 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-
 .swiper {
   width: 100%;
 }
-
-.swiper-slide{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.swiper-slide{
-  padding-left: 25px;
-}
-
-.swiper-controls{
+.swiper-controls {
   position: absolute;
   top: 50%;
   left: 0;
@@ -27,7 +15,8 @@ body {
   padding: 0 12px;
   z-index: 1;
 }
-.swiper-button-prev, .swiper-button-next {
+.swiper-button-prev,
+.swiper-button-next {
   --swiper-navigation-color: var(--main-highlighted-text);
   --swiper-navigation-size: 40px;
   --swiper-navigation-top-offset: 50%;
@@ -37,76 +26,78 @@ body {
   transition: all 0.3s;
 }
 
-.swiper-button-prev:hover, .swiper-button-next:hover {
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
   opacity: 1;
 }
 
-.cardProfesionales {
+.swiper-slide {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25px;
+}
+.cardServicios {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   text-align: center;
   max-width: 230px;
-  height: 330px;
+  width: 250px;
+  height: 280px;
   overflow: hidden;
   position: relative;
 }
 
-.imgProfesionales {
-  width: 150px;
-  height: 150px;
+.icono-servicios {
+  width: 80px;
+  height: 80px;
   object-fit: cover;
 }
-
-.botonTurno {
-  background-color: var(--main-highlighted-text);
-  color: white;
-}
-
-.botonTurno:hover {
-  border: 1px solid var(--main-highlighted-text);
-  color: var(--main-highlighted-text);
-  background-color: white;
+.card-text{
+    white-space: wrap;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    overflow: hidden;
 }
 
 @media (max-width: 991px) {
-  .swiper{
+  .swiper {
     width: 100%;
-    height: 300px;
+    height: 280px;
   }
   .swiper-slide {
     scroll-snap-align: center;
-    width: 100%;
+    width: 100px;
     justify-self: center;
     min-height: 100%;
   }
-  .cardProfesionales {
+  .cardServicios {
     height: 100%;
     width: 100%;
-  }
-  .imgProfesionales {
-    height: 100%;
-    object-fit: cover;
   }
   .card-title {
     font-size: 1rem;
   }
   .card-text {
-    font-size: .9rem;
+    font-size: 0.7rem;
   }
-  .swiper-button-prev, .swiper-button-next {
+  .swiper-button-prev,
+  .swiper-button-next {
     --swiper-navigation-size: 25px;
     padding: 1rem;
   }
-  .botonTurno {
-    font-size: 0.8rem;
-    padding: 0.5rem;
-  }
 }
-
-@media (max-width: 767px) {
-  .botonTurno {
-    font-size: 0.8rem;
-  }
+@media (max-width: 768px){
+    .cardServicios{
+        height: 220px;
+    }
+    .icono-servicios{
+        width: 60px;
+        height: 60px;
+    }
 }
