--- a/src/css/global.css
+++ b/src/css/global.css
@@ -69,19 +69,19 @@ header *{
     color: var(--heading-text);
     text-decoration: none;
 }
-.navbar-logo{
-}
 @media(min-width:768px){
     .navbar{
         width: 100%;
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
     }
     .navbar-logo{
-        width: 25%;
+        width: 30%;
+        display: flex;
+        justify-content: flex-start;
     }
     #navbarNav{
-        width: 75%;
+        width: 70%;
     }
 }
 /* MENU DESKTOP */
@@ -183,11 +183,12 @@ header *{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     height: 200px;
 }
 #menu-nav .btn-reg-log :is(a,button){
     width: 100%;
+    min-width: 150px;
     height: 4rem;
     font-size: 1.5rem;
     display: flex;
@@ -212,12 +213,20 @@ body:has([id=menu-nav]:popover-open) #navbar-toggler{
   --open: 1;
 }
 .btn-salir{
+    background-color: red;
+    border-radius: .6rem;
+    border: none;
+    outline: none;
     background-image: url('../iconos/logout.svg');
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 2rem;
     width: 100%;
     height: 3rem;
+    min-width: 50px;
+}
+.btn-salir:hover{
+    filter: invert(5%);
 }
 
 /* MAIN */
