--- a/src/css/pregFrecuentes.css
+++ b/src/css/pregFrecuentes.css
@@ -3,6 +3,7 @@
     background-color: var(--main-highlighted-text);
     text-align: center;
     color: var(--main-highlighted-bg);
+    padding: 1rem;
 }
 
 /* SECCION 2 */
