--- a/src/css/contacto.css
+++ b/src/css/contacto.css
@@ -251,26 +251,20 @@ body:has([id=menu-nav]:popover-open) #navbar-toggler{
     background-color: var(--main-highlighted-text);
     text-align: center;
     color: var(--main-highlighted-bg);
+    margin: 3rem auto;
+    padding: 1rem;
 }
-
-
-
 .mapa-fluid {
     border: none;
     border-radius: 10px;
     width: 100%;
     height: 17rem;
-
 }
-
-
-
 .info-contacto{
     background-color: var(--main-highlighted-bg);
     border-radius: 10px;
     width: 100%;
     justify-content: space-between;
-    
 }
 
 .img-fluid {
@@ -282,7 +276,6 @@ body:has([id=menu-nav]:popover-open) #navbar-toggler{
 
 .img-contacto {
     width: 100%;
-   
 }
 .bi {
     color: var(--main-highlighted-text);
