--- a/src/css/styleRegistro.css
+++ b/src/css/styleRegistro.css
@@ -1,24 +1,3 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    color: black;
-}
-
-body {
-    font-family: poppins;
-    height: 70%;
-}
-
-header {
-    background-color: #f5f5f5;
-    height: 2em;
-}
-
-main{
-    display: flex;
-    justify-content: center;
-} */
 
 .container-form {
     width: 80%;
@@ -32,6 +11,10 @@ main{
     display: flex;
     justify-content: space-evenly; 
     padding: 1rem;
+}
+.pass-items{
+    font-size: .7rem;
+    font-weight: bold;
 }
 
 @media(max-width:570px){
